# FinLyzer

./: README.md  app.py  news_scraper.py  pyproject.toml  report_generator.py  requirements.txt  stock_analyzer.py
.streamlit/: config.toml
