[project]
name = "python-news-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "curl-cffi>=0.11.4",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.63",
]
